--- a/system/common/css/estilos.css
+++ b/system/common/css/estilos.css
@@ -11,8 +11,10 @@ body{
 	max-width:100%;
 	max-height:99%;
 	margin: 0 auto 0px auto;
+	text-align: left;
 	position:relative;
 	clear:both;
+	overflow:hidden;
 	z-index:1;	
 }
 #cabecera{
@@ -56,12 +58,13 @@ body{
 	background:#FFF;
 	position:relative;
 	height:98%;
-	min-height:680px;	
+	min-height:670px;	
 	width:81%;
 	min-width:20px;
 	margin: 0 0 5px 3px;
+	padding: 5px 0 5px 3px;
 	float: left;
-	overflow:hidden;		
+	overflow:auto;		
 	z-index:2;
 	border: 1px solid #FF9933;
 }
@@ -118,10 +121,17 @@ body{
 	font-weight:bold;
 	color:#000000;
 }
-.txt_barra{
+.txt_usuario{
 	font-size:1em;
 	color:#999;
 	margin: 0 5px 0 5px;
+	text-align: left;
+}
+.txt_fecha{
+	font-size:1em;
+	color:#999;
+	margin: 0 5px 0 5px;
+	text-align: right;
 }
 .msj_rojo{
 	font-size:.9em;
